<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/bg_more_color" android:paddingLeft="@dimen/padding_left_27dp" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center|right" android:paddingRight="@dimen/padding_right_24dp" android:layout_width="fill_parent" android:layout_height="@dimen/height_56dp">
            <ImageView android:id="@id/img_close" android:layout_width="@dimen/width_20dp" android:layout_height="@dimen/height_20dp" android:src="@mipmap/ico_close" android:scaleType="fitXY" />
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="@dimen/height_86dp" />
        <TextView android:textSize="@dimen/txt_sign_out_size" android:textColor="@color/white_color" android:id="@id/txt_my_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_profile" />
        <View android:layout_width="fill_parent" android:layout_height="@dimen/height_30dp" />
        <TextView android:textSize="@dimen/txt_sign_out_size" android:textColor="@color/white_color" android:id="@id/txt_live_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/live_tv" />
        <View android:layout_width="fill_parent" android:layout_height="@dimen/height_30dp" />
        <TextView android:textSize="@dimen/txt_sign_out_size" android:textColor="@color/white_color" android:id="@id/txt_privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy" />
        <View android:layout_width="fill_parent" android:layout_height="@dimen/height_30dp" />
        <TextView android:textSize="@dimen/txt_sign_out_size" android:textColor="@color/white_color" android:id="@id/txt_term_condition" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/term_condition" />
        <View android:layout_width="fill_parent" android:layout_height="@dimen/height_30dp" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingRight="@dimen/padding_right_26dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/txt_sign_out_size" android:textColor="@color/white_color" android:id="@id/txt_play_hd" android:layout_width="@dimen/nol_dp" android:layout_height="wrap_content" android:text="@string/play_hd" android:layout_weight="1.0" />
            <ImageView android:id="@id/img_switch" android:layout_width="@dimen/width_37dp" android:layout_height="@dimen/height_20dp" android:src="@mipmap/ico_switch_on" />
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="@dimen/height_30dp" />
        <TextView android:textSize="@dimen/txt_sign_out_size" android:textColor="@color/white_color" android:id="@id/txt_sign_out" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_out" />
    </LinearLayout>
</LinearLayout>