<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_toolbar" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/padding_left_20dp" android:paddingRight="@dimen/padding_right_20dp" android:layout_width="fill_parent" android:layout_height="@dimen/nol_dp" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/btn_sign_in_txt_size" android:textColor="@color/white_color" android:gravity="center" android:paddingTop="@dimen/padding_top_104dp" android:paddingBottom="@dimen/padding_bottom_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/oops" />
        <TextView android:textColor="@color/forgot_password_txt_color" android:gravity="center" android:paddingBottom="@dimen/padding_bottom_44dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/forgot_password" />
        <android.support.design.widget.TextInputLayout android:textColorHint="@color/txt_color_email" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="@dimen/txt_email_size" android:textColor="@color/txt_color_email" android:textColorHint="@color/txt_color_email" android:id="@id/txt_email" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email" android:singleLine="true" android:imeOptions="actionDone" />
        </android.support.design.widget.TextInputLayout>
        <FrameLayout android:paddingTop="@dimen/padding_top_4dp" android:paddingBottom="@dimen/padding_bottom_26dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:background="@color/under_txt_line_color" android:layout_width="fill_parent" android:layout_height="@dimen/height_1dp" />
            <TextView android:textSize="@dimen/txt_error" android:textColor="@color/txt_color_error" android:gravity="right" android:id="@id/txt_email_error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/error_sampple" />
        </FrameLayout>
        <Button android:textSize="@dimen/btn_send_txt_size" android:textColor="@color/white_color" android:id="@id/btn_send" android:background="@drawable/send_bg" android:layout_width="fill_parent" android:layout_height="@dimen/height_48dp" android:text="@string/send" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>