<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorPrimary" android:paddingLeft="@dimen/padding_left_12dp" android:paddingTop="@dimen/padding_top_31dp" android:paddingRight="@dimen/padding_right_12dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/padding_bottom_55dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/white_color" android:gravity="center" android:paddingTop="@dimen/padding_top_32dp" android:paddingBottom="@dimen/padding_bottom_4dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/favorite_genre" />
            <TextView android:textColor="@color/txt_select_color" android:gravity="center" android:paddingBottom="@dimen/padding_bottom_30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select" />
            <LinearLayout android:orientation="vertical" android:id="@id/lyt_selected" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="bottom" android:paddingLeft="@dimen/padding_left_8dp" android:paddingRight="@dimen/padding_right_8dp" android:paddingBottom="@dimen/padding_bottom_12dp" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="@dimen/btn_send_txt_size" android:textColor="@color/white_color" android:layout_gravity="bottom" android:id="@id/btn_send" android:background="@drawable/send_bg" android:layout_width="fill_parent" android:layout_height="@dimen/height_55dp" android:text="@string/send" />
    </LinearLayout>
</RelativeLayout>